[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Level1.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Background/Level1/sea4.png" type="Texture" id=4]
[ext_resource path="res://Assets/Background/Level1/sea3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Background/Level1/sea2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Audio/teckel_cloud.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Background/Level1/sky.png" type="Texture" id=8]
[ext_resource path="res://Assets/Background/Level1/cloud.png" type="Texture" id=9]
[ext_resource path="res://Assets/Background/Level1/sea1.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Boat.tscn" type="PackedScene" id=11]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform float scroll_speed;
void fragment(){
	vec2 newuv = UV;
	newuv.x += TIME*scroll_speed;
	vec4 c = texture(TEXTURE, newuv);
	COLOR = c;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/scroll_speed = null

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1984, 0, 0, 0, 0, 0, 1984, 1080 )
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 90, 1120, 0, 0, 0, 0, 1900, 1120 )
}

[node name="Level1" type="Node2D"]
script = ExtResource( 1 )

[node name="Sky" type="Sprite" parent="."]
position = Vector2( 960, 540 )
z_index = -1
texture = ExtResource( 8 )

[node name="Clouds" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 2250, 540 )
z_index = -1
texture = ExtResource( 9 )

[node name="Boat" parent="." instance=ExtResource( 11 )]

[node name="Sea" type="AnimatedSprite" parent="."]
position = Vector2( 960, 540 )
frames = SubResource( 3 )
frame = 2
playing = true

[node name="Character" parent="." instance=ExtResource( 2 )]
position = Vector2( 96, 544 )
scale = Vector2( 0.5, 0.5 )

[node name="SeagullSpawner" type="Path2D" parent="."]
curve = SubResource( 4 )

[node name="PathFollow2D" type="PathFollow2D" parent="SeagullSpawner"]
position = Vector2( 1984, 0 )
rotation = 1.5708

[node name="FishSpawner" type="Path2D" parent="."]
curve = SubResource( 5 )

[node name="PathFollow2D" type="PathFollow2D" parent="FishSpawner"]
position = Vector2( 90, 1120 )

[node name="FishRythm" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="SeagullRythm" type="Timer" parent="."]
autostart = true

[node name="Win" type="Timer" parent="."]
autostart = true

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[connection signal="gone" from="Boat" to="." method="_on_Boat_gone"]
[connection signal="timeout" from="FishRythm" to="." method="_on_FishRythm_timeout"]
[connection signal="timeout" from="SeagullRythm" to="." method="_on_SeagullRythm_timeout"]
[connection signal="timeout" from="Win" to="." method="_on_Win_timeout"]
